--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 	box-shadow: 3px 3px 6px #ccc;
 }
 
-.notes{
+.score{
 	width: 87px;
 	height: 18px;
 	margin-top: -20px;
@@ -59,18 +59,14 @@
 	font-size: 10px;
 }
 
-.characteristics{
-	background-color: blue;
+.page_section{
+	background-color: rgb(129, 129, 129);
 	margin-left: 6.23vw;
+	margin-right: 6.23vw;
 }
-
 
 hr.solid{
 	border-top: 1px solid rgb(90, 90, 90);
-}
-
-.elements{
-	margin-left: 6.23vw;
 }
 
 .shovel{
@@ -78,10 +74,6 @@ hr.solid{
 }
 
 
-.More{
-	background-color: rgb(129, 129, 129);
-	margin-left: 6.23vw;
-}
 
 h4{
 	font-size: 25px;
@@ -91,6 +83,7 @@ h4{
 .more_infos{
 	margin-top: -20px;
 	margin-bottom: 30px;
+	max-width: 50%;
 	font-family: 'Avenir';
 	font-size: 18px;
 	color: #4F5F31;
@@ -98,10 +91,207 @@ h4{
 
 
 
+.slide {
+    display: flex;
+    align-items: flex-end;
+    width: 132.83px;
+    flex-shrink: 0;
+    height: 132.83px;
+    background-color: violet;
+    margin-right: 18.7px;
+    margin-top: 40px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(00, 00, 00, 0.16);
+}
+
+.slide-title {
+    height: 20px;
+    width: 132.83px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    background-color: #fff;
+}
 
 
+a {
+    color: inherit;
+    transition: 0.25s all ease-in-out;
+}
 
+a:visited {
+    color: #3d4852;
+}
 
+a:hover,
+a:focus,
+a:active {
+    background-color: #3d4852;
+    color: white;
+}
+
+a:focus {
+    outline: thin solid #3d4852;
+}
+
+a:hover,
+a:active {
+    outline: 0;
+}
+
+a.button {
+    align-items: center;
+    background-color: #3d4852;
+    border: 1px solid #3d4852;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+    display: inline-flex;
+    padding: 0.25rem 0.75rem;
+    text-decoration: none;
+    transition: all 0.25s ease-in-out;
+}
+
+a.button:hover,
+a.button:focus {
+    background-color: #58636F;
+    box-shadow: 0 0 2px 2px #bac6d3;
+}
+
+a.button:focus {
+    outline: 1px solid #3d4852;
+}
+
+a.button:visited {
+    color: #fff;
+}
+
+ul {
+    margin: 0 0 1.5rem;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+}
+
+svg {
+    fill: currentColor;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+p {
+    margin: 0 0 .5rem;
+}
+
+main {
+    padding: 1rem 2rem;
+    margin: auto;
+}
+
+header {
+    padding: 1rem 2rem;
+    text-align: center;
+}
+
+.card {
+	border: 0px solid #bac6d3;
+	max-width:80%;
+    height:auto;
+    border-radius: 8px;
+    padding: 1rem;
+}
+.card_img{
+	height: auto;
+	margin-top: -60px;
+    margin-bottom: .5rem;
+    max-width: calc(100% + 2rem);
+    position: relative;
+    left: -1rem;
+    right: -1rem;
+	border-radius: 8px;
+	z-index: 1;
+}
+
+.card-title{
+	position: relative;
+	color: white;
+	z-index: 2;
+}
+.card-price{
+	position: relative;
+	color: white;
+	margin-top: -40px;
+	z-index: 2;
+}
+/********************************
+* Carousel styles
+*********************************/
+.carousel-items {
+    display: flex;
+    overflow-x: scroll;
+    padding: 1rem 0;
+	scroll-snap-type: x mandatory;
+	
+}
+
+.carousel-item:hover{
+	transition: all .1s ease-in-out;
+	transform: scale(1.1);
+}
+.carousel-item {
+    flex: 1 0 250px;
+    margin-left: 1rem;
+    scroll-snap-align: start;
+}
+
+@media screen and (min-width: 320px) {
+    .carousel-item {
+        flex-basis: 300px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+
+    body,
+    button,
+    input,
+    select,
+    optgroup,
+    textarea {
+        font-size: 1.125rem;
+    }
+
+    h1 {
+        font-size: 2.75rem;
+    }
+
+    .carousel-item {
+        flex-basis: 325px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    .carousel-item {
+        flex-basis: 450px;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+
+    body,
+    button,
+    input,
+    select,
+    optgroup,
+    textarea {
+        font-size: 1.25rem;
+    }
+}
 
 @font-face {
     font-family: 'wilderregular';
@@ -110,3 +300,7 @@ h4{
     font-weight: normal;
     font-style: normal;
 }
+
+
+
+
