--- a/style.css
+++ b/style.css
@@ -1,4 +1,58 @@
 
+:root {
+    --vertfonce: #365d58;
+    --vert: #B8DE6F;
+  }
+
+@font-face {
+    font-family: 'wilderregular';
+    src: url('/fonts/wilder-webfont.woff') format('woff');
+	
+    font-weight: normal;
+    font-style: normal;
+}
+
+.carousel {
+    background: #FAFAFA;
+  }
+  
+  .carousel-cell {
+    width: 66%;
+    height: 200px;
+    margin-right: 10px;
+    background: #8C8;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+  }
+  
+  /* cell number */
+  .carousel-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(carousel-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+  }
+  
+h2{
+    font-family: "wilderregular";
+    font-size: 50px;
+    font-weight: 300;
+    margin-bottom: 5px;
+    color: var(--vertfonce)
+}
+
+h4{
+	font-size: 25px;
+	color: #365D58;
+}
+
+hr.solid{
+    border-top: 1px solid rgb(90, 90, 90);
+}
+
+
 .navbar {
 	overflow: hidden;
 	height: 115px;
@@ -14,7 +68,7 @@
   }
 
 .dropdown .dropbtn {
-	font: "Wilder", sans serif;
+	font: "Wilderregular";
 	font-size: 14px;  
 	border: none;
 	outline: none;
@@ -28,6 +82,7 @@
 .navbar a:hover, .dropdown:hover .grainesbtn {
 	background-color: blue;
 }
+
 .breadcrumb
 {
 	font-size: 14px;
@@ -60,25 +115,31 @@
 }
 
 .page_section{
-	background-color: rgb(129, 129, 129);
+	background-color: rgb(255, 255, 255);
 	margin-left: 6.23vw;
 	margin-right: 6.23vw;
 }
 
-hr.solid{
-	border-top: 1px solid rgb(90, 90, 90);
+.elements{
+    display: inline-flex;
 }
+
+.elements_img{
+    position: relative;
+    margin-top: 20px;
+}
+
+.elements_text{
+    color: var(--vertfonce);
+    text-align: center;
+}
+
 
 .shovel{
 	height: 20px;
 }
 
 
-
-h4{
-	font-size: 25px;
-	color: #365D58;
-}
 
 .more_infos{
 	margin-top: -20px;
@@ -89,82 +150,9 @@ h4{
 	color: #4F5F31;
 }
 
-
-
-.slide {
-    display: flex;
-    align-items: flex-end;
-    width: 132.83px;
-    flex-shrink: 0;
-    height: 132.83px;
-    background-color: violet;
-    margin-right: 18.7px;
-    margin-top: 40px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(00, 00, 00, 0.16);
+#1 {
+    background-color: var(--vert);
 }
-
-.slide-title {
-    height: 20px;
-    width: 132.83px;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-    background-color: #fff;
-}
-
-
-a {
-    color: inherit;
-    transition: 0.25s all ease-in-out;
-}
-
-a:visited {
-    color: #3d4852;
-}
-
-a:hover,
-a:focus,
-a:active {
-    background-color: #3d4852;
-    color: white;
-}
-
-a:focus {
-    outline: thin solid #3d4852;
-}
-
-a:hover,
-a:active {
-    outline: 0;
-}
-
-a.button {
-    align-items: center;
-    background-color: #3d4852;
-    border: 1px solid #3d4852;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    display: inline-flex;
-    padding: 0.25rem 0.75rem;
-    text-decoration: none;
-    transition: all 0.25s ease-in-out;
-}
-
-a.button:hover,
-a.button:focus {
-    background-color: #58636F;
-    box-shadow: 0 0 2px 2px #bac6d3;
-}
-
-a.button:focus {
-    outline: 1px solid #3d4852;
-}
-
-a.button:visited {
-    color: #fff;
-}
-
 ul {
     margin: 0 0 1.5rem;
     padding: 0;
@@ -174,28 +162,9 @@ li {
     display: inline-block;
 }
 
-svg {
-    fill: currentColor;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-p {
-    margin: 0 0 .5rem;
-}
-
-main {
-    padding: 1rem 2rem;
-    margin: auto;
-}
-
-header {
-    padding: 1rem 2rem;
-    text-align: center;
-}
-
 .card {
-	border: 0px solid #bac6d3;
+    border: 0px solid #bac6d3;
+    background-color: var(--vert);
 	max-width:80%;
     height:auto;
     border-radius: 8px;
@@ -292,15 +261,6 @@ header {
         font-size: 1.25rem;
     }
 }
-
-@font-face {
-    font-family: 'wilderregular';
-    src: url('fonts/wilder-webfont.woff') format('woff'),
-		 url('fonts/wilder-webfont.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
 
 
 
